--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
+    "next-cookies": "^2.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
