--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
+    "next-absolute-url": "^1.2.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
